# go_interface_msgs

./: CMakeLists.txt  README.md  package.xml
msg/: ChangeLockFlg.msg  VehicleStatus.msg
